# llamaware

./: .agent  .cache_ggshield  .clang-tidy  .dockerignore  .env.example  .gitignore  .llamaware-agent.yml  .opencode-agent.md  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CHECKLIST.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSION  agent.cpp  demo.txt  docker-compose.e2e.yml  pr24_body.md  signed.json  testfile.txt
.github/: CODEOWNERS  SECURITY.md  bot-config.yml  dependabot.yml  labeler.yml  pull_request_template.md  release-template.md  renovate.json
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  feature_request.md
.github/actions/bump-version/: action.yml
.github/actions/release/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: agent.yml  bot.yml  ci.yml  cla.yml  codeql.yml  dependency-update.yml  deploy.yml  docker.yml  e2e.yml  labeler.yml  lint.yml  llamaware-agent.yml  lock-merged.yml  pr-checks.yml  release.yml  sast.yml  securit.yml  security-release.yml  security.yml  tracking.yml  update-readme.yml  version-bump.yml
data/: mcp_servers.json  theme_config.json
docs/: ARCHITECTURE.md  BUILDING_ON_MACOS.md  CI-CD.md  COMMANDS.md  DEVELOPMENT-WORKFLOW.md  DEVELOPMENT.md  GITHUB_BOT.md  SETUP.md  github-bot.md
include/: version.h  version.h.in
include/core/: agent.h  agent_mode.h
include/data/: memory_manager.h
include/services/: ai_service.h  auth_service.h  checkpoint_service.h  codebase_service.h  command_service.h  context_service.h  database_service.h  error_service.h  file_service.h  git_service.h  github_service.h  mcp_service.h  multi_file_service.h  sandbox_service.h  theme_service.h  web_service.h
include/utils/: config.h  memory_utils.h  platform.h  ui.h  validation.h  version.h.in
package/: README.md
package/binary/: install.sh
package/database/: init.sql
package/docker/: Dockerfile  docker-compose.yml
package/docs/: CHANGELOG.md  CI-CD.md  CONTRIBUTING.md  DEVELOPMENT-WORKFLOW.md  DISTRIBUTION.md  PREFLIGHT-TESTING.md
package/managers/homebrew/: llamaware.rb
package/scripts/: preflight.sh  prepare-release.sh  release.sh  setup-git-hooks.sh  smart-preflight.sh
scripts/: bump-version.sh  commit-msg  full-check.sh  install-deps.sh  report.sh  rewrite_msg.sh  run-clang-tidy.sh  setup-pre-commit.sh  version.sh
src/: main.cpp
src/core/: agent.cpp
src/data/: memory_manager.cpp
src/services/: ai_service.cpp  ai_service.cpp.bak  auth_service.cpp  checkpoint_service.cpp  codebase_service.cpp  command_service.cpp  context_service.cpp  database_service.cpp  error_service.cpp  file_service.cpp  git_service.cpp  github_service.cpp  mcp_service.cpp  multi_file_service.cpp  sandbox_service.cpp  theme_service.cpp  web_service.cpp
src/utils/: config.cpp  memory_utils.cpp  ui.cpp  validation.cpp  version.cpp
tests/: main_test.cpp
tests/e2e/: debug_test.sh  run_e2e_tests.sh  run_tests_in_docker.sh  simple_test.sh  test_read.sh  test_read.txt  test_read_after_write.sh  test_write.sh  test_write.txt
tests/e2e/data/: memory.txt
tests/mocks/: cerebras.conf  mock_ollama.py  start_nginx.sh  together.conf
tests/mocks/cerebras_responses/: index.html
tests/mocks/together_responses/: index.html
web/: .env.example  README.md  build.sh  deploy.md  index.html  package-lock.json  package.json
web/public/: _redirects  index.html  manifest.json  robots.txt
web/src/: App.css  App.js  App.jsx  index.css
web/src/components/: Footer.js  Footer.jsx  Hero.js  Hero.jsx  Terminal.js  Terminal.jsx
